--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@pusher/pusher-websocket-react-native": "^1.1.1",
     "@react-native-community/netinfo": "9.3.5",
     "buffer": "^6.0.3",
     "expo": "~47.0.7",
     "expo-status-bar": "~1.4.2",
-    "pusher-js": "^7.5.0",
+    "pusher-js": "7.4.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
